[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/components/final/BadEnding.gd" type="Script" id=1]
[ext_resource path="res://scenes/components/hello_luna/ship/textures/ship.png" type="Texture" id=2]
[ext_resource path="res://scenes/components/hello_luna/ship/textures/ship_jaw.png" type="Texture" id=3]
[ext_resource path="res://scenes/components/player/laser_shot/LaserShotRay.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/components/player/laser_shot/audio/shooting.wav" type="AudioStream" id=5]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Ship:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -392, -144 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Ship:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 4, 4 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Ship:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=1]
resource_name = "run"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Ship:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.7, 1, 2, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 592, 168 ), Vector2( 780, 192 ), Vector2( 1400, 192 ), Vector2( 2000, 160 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "_start_ray_anim"
}, {
"args": [  ],
"method": "_end_ray_anim"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Ship:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[node name="BadEnding" type="Area2D"]
collision_layer = 1073741824
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_editor_description_": "Топлива для луча быть не должно! Описание в компоненте."
}

[node name="CallingShipCollision" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2( 392, 0 )
polygon = PoolVector2Array( 704, 0, 704, 2376, 744, 2376, 744, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Ship" type="Node2D" parent="."]
visible = false
position = Vector2( -392, -144 )
scale = Vector2( 4, 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Ship" type="Sprite" parent="Ship"]
visible = false
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="ShipJaw" type="Sprite" parent="Ship"]
visible = false
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="LaserShotRay" parent="Ship" instance=ExtResource( 4 )]
modulate = Color( 1, 1, 1, 0.392157 )
position = Vector2( 44, -400 )
rotation = 1.5708
scale = Vector2( 1, 1.5 )
__meta__ = {
"_edit_group_": true,
"_editor_description_": "scale x 0.12"
}

[node name="Shooting" type="AudioStreamPlayer2D" parent="Ship/LaserShotRay"]
stream = ExtResource( 5 )
max_distance = 3000.0
bus = "Effects"
__meta__ = {
"_edit_lock_": true
}

[node name="Appearance" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/run = SubResource( 1 )

[connection signal="area_entered" from="." to="." method="_on_BadEnding_area_entered"]
[connection signal="animation_finished" from="Appearance" to="." method="_on_Appearance_animation_finished"]
